--- a/M03/Assignment/app/src/main/res/layout/song_list_layout.xml
+++ b/M03/Assignment/app/src/main/res/layout/song_list_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+<com.google.android.material.card.MaterialCardView android:id="@+id/parent_card_view"
     app:cardCornerRadius="8dp"
     android:layout_margin="8dp"
     android:backgroundTint="@color/colorRapGenreCardView"
